apps/statuspage/.pipeline/ansible-webhook/openshift_manifests/deployment.yml
apiVersion: v1
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: webhook-ansible
    name: webhook-ansible
  spec:
    replicas: 1
    selector:
      app: webhook-ansible
      deploymentconfig: webhook-ansible
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: webhook-ansible
          deploymentconfig: webhook-ansible
      spec:
        containers:
        - image: docker-registry.default.svc:5000/c81e6h-tools/webhook-ansible:latest
          imagePullPolicy: Always
          name: webhook-ansible
          ports:
          - containerPort: 9000
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /etc/webhook
            name: webhook-ansible-1
          - mountPath: /runner/artifacts
            name: webhook-ansible-2
          - mountPath: /runner/inventory
            name: webhook-ansible-3
          - mountPath: /runner/project
            name: webhook-ansible-4
          - mountPath: /opt/hooks
            name: volume-var1j
          - mountPath: /opt/creds/
            name: gh-secret
            readOnly: true
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - emptyDir: {}
          name: webhook-ansible-1
        - emptyDir: {}
          name: webhook-ansible-2
        - emptyDir: {}
          name: webhook-ansible-3
        - emptyDir: {}
          name: webhook-ansible-4
        - configMap:
            defaultMode: 420
            name: webhook-ansible-hooks
          name: volume-var1j
        - name: gh-secret
          secret:
            defaultMode: 420
            secretName: gh
    test: false
