apps/statuspage/.pipeline/ansible-webhook/openshift_manifests/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: webhook-ansible
  name: webhook-ansible
spec:
  port:
    targetPort: 9000-tcp
  tls:
    termination: edge
  to:
    kind: Service
    name: webhook-ansible
    weight: 100
  wildcardPolicy: None
